# reflect-cpp-test

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yaml
src/: CMakeLists.txt  api_server_support.cpp  api_server_support.hpp  cat_api_routes.cpp  cat_api_routes.hpp  cat_api_server.cpp  cat_api_types.hpp  main.cpp  openapi_builder.cpp  openapi_builder.hpp  openapi_demo.cpp  openapi_demo.hpp  typed_api_routes.cpp  typed_api_routes.hpp
src/core/: CMakeLists.txt  api_server_support.cpp  api_server_support.hpp  openapi_builder.cpp  openapi_builder.hpp  typed_api_routes.cpp  typed_api_routes.hpp
src/core/tests/: CMakeLists.txt  api_infra_tests.cpp  openapi_tests.cpp
src/demo/: CMakeLists.txt  cat_api_routes.cpp  cat_api_routes.hpp  cat_api_server.cpp  cat_api_server.hpp  cat_api_types.hpp  main.cpp  openapi_demo.cpp  openapi_demo.hpp
src/demo/tests/: CMakeLists.txt  cat_api_demo_tests.cpp  openapi_tests.cpp
tests/: CMakeLists.txt  core_openapi_tests.cpp  demo_openapi_tests.cpp  openapi_tests.cpp
